tests/dataset/tpc-ds/compiler/cpp/q35.error
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:81:12: error: ‘ca’ was not declared in this scope
   81 |   decltype(ca.ca_state) state;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:81:12: error: ‘ca’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:82:12: error: ‘cd’ was not declared in this scope
   82 |   decltype(cd.cd_gender) gender;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:82:12: error: ‘cd’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:83:12: error: ‘cd’ was not declared in this scope
   83 |   decltype(cd.cd_marital_status) marital;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:83:12: error: ‘cd’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:84:12: error: ‘cd’ was not declared in this scope
   84 |   decltype(cd.cd_dep_count) dep;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:84:12: error: ‘cd’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:85:12: error: ‘cd’ was not declared in this scope
   85 |   decltype(cd.cd_dep_employed_count) emp;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:85:12: error: ‘cd’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:86:12: error: ‘cd’ was not declared in this scope
   86 |   decltype(cd.cd_dep_college_count) col;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:86:12: error: ‘cd’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:89:12: error: ‘c’ was not declared in this scope
   89 |   decltype(c) c;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:89:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:90:12: error: ‘ca’ was not declared in this scope; did you mean ‘c’?
   90 |   decltype(ca) ca;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:90:12: error: ‘ca’ was not declared in this scope; did you mean ‘c’?
   90 |   decltype(ca) ca;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:91:12: error: ‘cd’ was not declared in this scope; did you mean ‘ca’?
   91 |   decltype(cd) cd;
      |            ^~
      |            ca
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:91:12: error: ‘cd’ was not declared in this scope; did you mean ‘ca’?
   91 |   decltype(cd) cd;
      |            ^~
      |            ca
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:317:26: error: ‘ss’ was not declared in this scope
  317 |     std::vector<decltype(ss.ss_customer_sk)> __items;
      |                          ^~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:317:44: error: template argument 1 is invalid
  317 |     std::vector<decltype(ss.ss_customer_sk)> __items;
      |                                            ^
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:317:44: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:324:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  324 |         __items.push_back(ss.ss_customer_sk);
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:338:38: error: request for member ‘begin’ in ‘purchased’, which is of non-class type ‘int’
  338 |           if (!((std::find(purchased.begin(), purchased.end(),
      |                                      ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:338:57: error: request for member ‘end’ in ‘purchased’, which is of non-class type ‘int’
  338 |           if (!((std::find(purchased.begin(), purchased.end(),
      |                                                         ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:339:58: error: request for member ‘end’ in ‘purchased’, which is of non-class type ‘int’
  339 |                            c.c_customer_sk) != purchased.end())))
      |                                                          ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:341:33: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  341 |           auto __key = Group{ca.ca_state,
      |                              ~~~^~~~~~~~
      |                                 |
      |                                 std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:350:45: error: cannot convert ‘Customer’ to ‘int’ in initialization
  350 |               __g.items.push_back(__struct7{c, ca, cd});
      |                                             ^
      |                                             |
      |                                             Customer
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:357:67: error: cannot convert ‘Customer’ to ‘int’ in initialization
  357 |                 __struct8{__key, std::vector<__struct7>{__struct7{c, ca, cd}}});
      |                                                                   ^
      |                                                                   |
      |                                                                   Customer
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:357:77: error: no matching function for call to ‘std::vector<__struct7>::vector(<brace-enclosed initializer list>)’
  357 |                 __struct8{__key, std::vector<__struct7>{__struct7{c, ca, cd}}});
      |                                                                             ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:7:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; value_type = std::vector<__struct7>::value_type; allocator_type = std::allocator<__struct7>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; allocator_type = std::allocator<__struct7>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq353804131198/001/prog.cpp:369:5: error: conversion from ‘vector<__struct9>’ to non-scalar type ‘vector<__struct7>’ requested
  329 |   std::vector<__struct7> groups = ([&]() {
      |                                   ~~~~~~~~
  330 |     std::vector<__struct8> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  331 |     for (auto c : customer) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  332 |       for (auto ca : customer_address) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |         if (!((c.c_current_addr_sk == ca.ca_address_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  334 |           continue;
      |           ~~~~~~~~~
  335 |         for (auto cd : customer_demographics) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  336 |           if (!((c.c_current_cdemo_sk == cd.cd_demo_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  337 |             continue;
      |             ~~~~~~~~~
  338 |           if (!((std::find(purchased.begin(), purchased.end(),
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  339 |                            c.c_customer_sk) != purchased.end())))
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  340 |             continue;
      |             ~~~~~~~~~
  341 |           auto __key = Group{ca.ca_state,
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  342 |                              cd.cd_gender,
      |                              ~~~~~~~~~~~~~
  343 |                              cd.cd_marital_status,
      |                              ~~~~~~~~~~~~~~~~~~~~~
  344 |                              cd.cd_dep_count,
      |                              ~~~~~~~~~~~~~~~~
  345 |                              cd.cd_dep_employed_count,
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~
  346 |                              cd.cd_dep_college_count};
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~
  347 |           bool __found = false;
      |           ~~~~~~~~~~~~~~~~~~~~~
  348 |           for (auto &__g : __groups) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  349 |             if (__g.key == __key) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~
  350 |               __g.items.push_back(__struct7{c, ca, cd});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  351 |               __found = true;
      |               ~~~~~~~~~~~~~~~
  352 |               break;
      |               ~~~~~~
  353 |             }
      |             ~
  354 |           }
      |           ~
  355 |           if (!__found) {
      |           ~~~~~~~~~~~~~~~
  356 |             __groups.push_back(
      |             ~~~~~~~~~~~~~~~~~~~
  357 |                 __struct8{__key, std::vector<__struct7>{__struct7{c, ca, cd}}});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  358 |           }
      |           ~
  359 |         }
      |         ~
  360 |       }
      |       ~
  361 |     }
      |     ~
  362 |     std::vector<__struct9> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  363 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  364 |       __items.push_back(__struct9{g.key.state, g.key.gender, g.key.marital,
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  365 |                                   g.key.dep, g.key.emp, g.key.col,
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  366 |                                   ((int)g.items.size())});
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~
  367 |     }
      |     ~
  368 |     return __items;
      |     ~~~~~~~~~~~~~~~
  369 |   })();
      |   ~~^~
